search, all tabs at bottom

--- a/scss/custom.sass
+++ b/scss/custom.sass
@@ -1,6 +1,9 @@
 $brandColor: #008cc9
 $borderColor: #eee
 
+.below-subnav
+  top: 86px
+
 /* Sidemenu */
 .menu-open .menu-content.menu-animated
   transform: translate3d(-225px, 0px, 0px) scale(.8) !important
@@ -78,7 +81,7 @@ ion-side-menus
   display: none
 
 .platform-android .bar-subheader
-  top: 93px
+  top: 44px   /* was 93 */
 
 /* Post */
 .item-body.post-body
@@ -111,8 +114,8 @@ ion-side-menus
   font-weight: 700
   margin-top: 16px
 
-/* Messaging */
-.list-messages
+/* Apps */
+.list-apps
   .item
     padding-right: 8px
   .row
