--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -1,20 +1,29 @@
 <ion-view>
   <ion-nav-title>
-    <span class="logo-text">Cortex</span>
+    <img src="img/scteheader.png" height="100%"></img>
   </ion-nav-title>
-  <ion-nav-buttons side="secondary">
-    <button class="button button-icon ion-grid" ng-click="toggleMenu()"></button>
-  </ion-nav-buttons>
 
-  <div class="bar bar-subheader box-shadow">
-    <div class="button-bar">
-      <a class="button button-light icon-left ion-compose has-border-right" ng-click="openPost()">Share</a>
-      <a class="button button-light icon-left ion-camera" ng-click="openPost()">Photo</a>
-    </div>
-  </div>
+  <ion-header-bar class="bar-subheader box-shadow has-input item-input-inset">
+    <label class="item-input-wrapper">
+      <i class="icon ion-search placeholder-icon"></i>
+      <input type="search" placeholder="Search guides, course materials, acronyms, etc." ng-model="query" ng-init="query=''" ng-focus="showRecentSearches()" ng-blur="hideRecentSearches()" ng-change="searchChange()">
+    </label>
+    <button class="button button-clear" ng-show="query.length > 0" ng-click="query = ''">
+      Cancel
+    </button>
+  </ion-header-bar>
+
 
   <ion-content class="has-subheader stable-bg">
     <ion-refresher on-refresh="refresh()" pulling-icon="ion-chevron-up"></ion-refresher>
+
+    <div class="list" ng-show="filtedUsers.length && query.length">
+      <div class="item item-avatar" ng-repeat="user in filtedUsers = (users | filter: query)">
+        <img ng-src="{{user.face}}">
+        <h2><b>{{user.name}}</b></h2>
+        <p>{{user.lastText}}</p>  
+      </div>
+    </div>
 
     <div class="list card new-feeds" ng-repeat="item in [0,1,2,3,4,5,6,7,8]">
       <div class="item" ng-if="$index%5 == 1">
