--- a/www/templates/me/me.html
+++ b/www/templates/me/me.html
@@ -1,7 +1,20 @@
-<ion-view view-title="Me">
+<ion-view view-title="My Learning">
   <ion-nav-buttons side="secondary">
     <button class="button button-icon ion-ios-gear-outline" ui-sref="tab.settings"></button>
   </ion-nav-buttons>
+  <ion-header-bar class="bar-subheader">
+    <div class="tabs tabs-secondary" ng-init="activeTab = 0">
+      <div class="tab-item" ng-class="{active: activeTab == 0}" ng-click="activeTab = 0">
+        In progress
+      </div>
+      <div class="tab-item" ng-class="{active: activeTab == 1}" ng-click="activeTab = 1">
+        Completed
+      </div>
+      <div class="tab-item" ng-class="{active: activeTab == 2}" ng-click="activeTab = 2">
+        All my courses
+      </div>
+    </div>  
+  </ion-header-bar>
   <ion-content class="stable-bg">
     <div class="header-me">
       <div class="overlay">
