--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -13,8 +13,8 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="me"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="App Library" icon-off="ion-android-apps" icon-on="ion-android-apps" href="#/tab/messaging" badge="2" badge-style="badge-assertive">
-    <ion-nav-view name="messaging"></ion-nav-view>
+  <ion-tab title="App Library" icon-off="ion-android-apps" icon-on="ion-android-apps" href="#/tab/apps" badge="2" badge-style="badge-assertive">
+    <ion-nav-view name="apps"></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="Expert Community" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/network">
