--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-nav-title>
-    <img src="img/scteheader.png" height="100%"></img>
+    <img src="img/scteheader.png" style="max-height: 100%; max-width: 100%;"></img>
   </ion-nav-title>
 
   <ion-header-bar class="bar-subheader box-shadow has-input item-input-inset">
