home view, search stub

--- a/scss/custom.sass
+++ b/scss/custom.sass
@@ -2,7 +2,39 @@ $brandColor: #008cc9
 $borderColor: #eee
 
 .below-subnav
+  // this probable doesn't really work
   top: 86px
+
+.app-icon
+  width: 50px
+  height: 50px
+  border-radius: 20%
+  border: 2px solid $borderColor
+  vertical-align: middle
+
+.pdf-icon
+  width: 50px
+  // height: 80px
+  // border-radius: 20%
+  border: 2px solid $borderColor
+  vertical-align: middle
+
+.bigicon
+  font-size: 64px;
+
+.bigicon.ion-calendar
+  color: darkorange;
+
+
+
+
+
+
+
+
+
+
+
 
 /* Sidemenu */
 .menu-open .menu-content.menu-animated
