--- a/www/templates/modal/recentsearches.html
+++ b/www/templates/modal/recentsearches.html
@@ -5,15 +5,17 @@
 		</button>
 		<div class="h1 title">Recent searches</div>
 	</ion-header-bar>
+
 	<ion-content>
+      <div class="item item-divider">Tap to search again</div>
 		<div class="list">
-      <div class="item item-divider">aoeu</div>
-      <div class="item item-avatar item-icon-right" ng-repeat="i in [0,1,2,3,4,5,6,7,8]">
-        <img src="img/adam.jpg" alt="">
-        <h2><b>Adam Lambert</b></h2>
-        <p>Sales Executive</p>
-        <i class="icon ion-plus-circled calm"></i>
-      </div>
+		  <a class="item item-icon-right" href="#" ng-repeat="i in [0,1,2,3,4,5]">
+			"arris modem fast reboot"
+			<i class="icon ion-search"></i>
+			<p>23 results</p>
+		  </a>
+		</div>
+	  </div>
     </div>
 	</ion-content>
 </ion-modal-view>
