add platform to app library header

--- a/www/templates/apps/apps.html
+++ b/www/templates/apps/apps.html
@@ -1,5 +1,5 @@
-<ion-view view-title="App Library">
-  <ion-content class="stable-bg" ng-controller="ConfigController">
+<ion-view view-title="{{prettyPlatform}} App Library" ng-controller="ConfigController">
+  <ion-content class="stable-bg">
     <div class="list">
       <div ng-repeat="item in staticcontent.apps">
 
