--- a/www/templates/apps/apps.html
+++ b/www/templates/apps/apps.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{prettyPlatform}} App Library" ng-controller="ConfigController">
+<ion-view view-title="{{prettyPlatform}} App Library" ng-controller="StaticContentController">
   <ion-content class="stable-bg">
     <div class="list">
       <div ng-repeat="item in staticcontent.apps">
