--- a/www/templates/search/search.html
+++ b/www/templates/search/search.html
@@ -1,14 +1,22 @@
-<ion-view hide-nav-bar="true">
-  <ion-header-bar class="has-input item-input-inset">
-    <label class="item-input-wrapper">
-      <input type="search" placeholder="Search" ng-model="query" ng-init="query=''" focus-me>
-    </label>
-    <button class="button button-clear" ng-show="query.length > 0" ng-click="query = ''">
-      Cancel
-    </button>
+<ion-view view-title="Tech Tips & More">
+  <ion-nav-buttons side="secondary">
+    <button class="button button-icon ion-ios-gear-outline" ui-sref="tab.settings"></button>
+  </ion-nav-buttons>
+  <ion-header-bar class="bar-subheader">
+    <div class="tabs tabs-secondary" ng-init="activeTab = 0">
+      <div class="tab-item" ng-class="{active: activeTab == 0}" ng-click="activeTab = 0">
+        Tech Tips
+      </div>
+      <div class="tab-item" ng-class="{active: activeTab == 1}" ng-click="activeTab = 1">
+        Standards
+      </div>
+      <div class="tab-item" ng-class="{active: activeTab == 2}" ng-click="activeTab = 2">
+        Best Practices
+      </div>
+    </div>  
   </ion-header-bar>
 
-  <ion-content class="has-header bg-grey-200">
+  <ion-content class="has-header bg-grey-200 has-subheader">
     <div class="list" ng-show="filtedUsers.length && query.length">
       <div class="item item-avatar" ng-repeat="user in filtedUsers = (users | filter: query)">
         <img ng-src="{{user.face}}">
