--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,7 +5,7 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-calm tabs-light">
 
-  <ion-tab title="Home" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/home" badge="5" badge-style="badge-assertive">
+  <ion-tab title="Discover" icon-off="ion-search" icon-on="ion-search" href="#/tab/home" badge="5" badge-style="badge-assertive">
     <ion-nav-view name="home"></ion-nav-view>
   </ion-tab>
 
@@ -17,8 +17,8 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="apps"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Expert Community" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/network">
-    <ion-nav-view name="network"></ion-nav-view>
+  <ion-tab title="Expert Community" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/community">
+    <ion-nav-view name="community"></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="Tech Tips & More" icon-off="ion-ios-lightbulb-outline" icon-on="ion-ios-lightbulb" href="#/tab/search">
