basic scaffolding for 'more' tab

--- a/scss/custom.sass
+++ b/scss/custom.sass
@@ -1,5 +1,8 @@
-$brandColor: #008cc9
+$brandColor: #0a558c
 $borderColor: #eee
+
+.button.button-positive
+  background-color: $brandColor
 
 .below-subnav
   // this probable doesn't really work
