--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -21,8 +21,8 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="community"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Tech Tips & More" icon-off="ion-ios-lightbulb-outline" icon-on="ion-ios-lightbulb" href="#/tab/search">
-    <ion-nav-view name="search"></ion-nav-view>
+  <ion-tab title="Tech Tips & More" icon-off="ion-ios-lightbulb-outline" icon-on="ion-ios-lightbulb" href="#/tab/more">
+    <ion-nav-view name="more"></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
