--- a/scss/custom.sass
+++ b/scss/custom.sass
@@ -1,8 +1,8 @@
-$brandColor: #0a558c
+$brandColor: #008cc9
 $borderColor: #eee
 
 .button.button-positive
-  background-color: $brandColor
+  background-color: #0a558c
 
 .below-subnav
   // this probable doesn't really work
