--- a/www/templates/more/more.html
+++ b/www/templates/more/more.html
@@ -24,6 +24,7 @@
           <div class="list">
             <a class="item item-thumbnail-left" href="#">
               <img holder data-src="holder.js/100px100p?outline=yes&text=image goes here">
+              <i><i class="icon ion-social-youtube"></i></i>
               Wi-Fi Dead Spots
               <p>
                 Client's wifi router is the basement? No problem!
