load stubs from remote

--- a/scss/custom.sass
+++ b/scss/custom.sass
@@ -1,11 +1,8 @@
-$brandColor: #008cc9
+$brandColor: #008cc9    // this is used for "calm"
 $borderColor: #eee
 
-.button.button-positive
-  background-color: #0a558c
-
 .below-subnav
-  // this probable doesn't really work
+  // this probable doesn't really work, but it's a hack for now
   top: 86px
 
 .app-icon
