--- a/www/templates/more/more.html
+++ b/www/templates/more/more.html
@@ -36,7 +36,7 @@
 
       <div class="row">
         <div class="col col-80 col-offset-10 text-center">
-          <button class="button button-positive">
+          <button class="button button-calm">
             Submit your Tech Tip!
           </button>
         </div>
