standards sub-tab

--- a/www/templates/more/more.html
+++ b/www/templates/more/more.html
@@ -55,14 +55,20 @@
       </div>
     </div>
 
-    <div class="card" ng-show="activeTab == 1">
+    <div class="card" ng-show="activeTab == 1" ng-controller="StaticContentController">
       <div class="list">
         <div class="item item-divider">
           Standards
         </div>
-        <div class="item item-icon-left" ng-repeat="i in [1,2,3]">
+          <label class="item item-input">
+            <i class="icon ion-search placeholder-icon"></i>
+            <input type="text" placeholder="Search" ng-model="searchBox">
+          </label>
+
+          <div class="item item-icon-left" ng-repeat="item in staticcontent.standards | filter:searchBox track by $index" ng-click="openPage(item.url)">
           <i class="icon ion-document"></i>
-          Doc #{{i}}
+          <h2>{{item.identifier}}</h2>
+          <p>{{item.title}}</p>
         </div>
       </div>
     </div>
