--- a/www/templates/mylearning/settings.html
+++ b/www/templates/mylearning/settings.html
@@ -2,7 +2,7 @@
   <ion-header-bar class="bar-subheader">
     <div class="tabs tabs-secondary" ng-init="activeTab = 0">
       <div class="tab-item" ng-class="{active: activeTab == 0}" ng-click="activeTab = 0">
-        Account
+        App version
       </div>
       <div class="tab-item" ng-class="{active: activeTab == 1}" ng-click="activeTab = 1">
         Privacy
@@ -14,12 +14,12 @@
   </ion-header-bar>
   <ion-content class="has-header has-subheader">
     <div ng-show="activeTab == 0">
-      <div class="list">
-        <div class="item item-text-wrap" ng-repeat="i in [0,1,2,3,4,5,6,7,8,9]">
-          <h2>Email addresses</h2>
-          <p>Add or remove email address on your account</p>
-        </div>
-      </div>
+      <button class="button button-primary button-block " ng-click="checkForUpdates()">
+        Check for updates
+      </button>
+      <button class="button button-stable button-block button-pulse" ng-if="hasUpdate" ng-click="doUpdate()">
+        Download update
+      </button>
     </div>
 
     <div ng-show="activeTab == 1">
