tech tip detail view

--- a/www/templates/more/more.html
+++ b/www/templates/more/more.html
@@ -19,7 +19,7 @@
   <ion-content class="has-header bg-grey-200 has-subheader">
 
     <div ng-show="activeTab == 0">
-      <div class="list card">
+      <div class="list card" ui-sref="tab.techtip">
         <div class="item item-body">
           <div class="list">
             <a class="item item-thumbnail-left" href="#">
@@ -27,7 +27,7 @@
               <i><i class="icon ion-social-youtube"></i></i>
               Wi-Fi Dead Spots
               <p>
-                Client's wifi router is the basement? No problem!
+                Client's wifi router is in the basement? No problem!
               </p>
             </a>
           </div>
