--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,7 +5,7 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-calm tabs-light">
 
-  <ion-tab title="Discover" icon-off="ion-search" icon-on="ion-search" href="#/tab/home" badge="5" badge-style="badge-assertive">
+  <ion-tab title="Discover" icon-off="ion-ios-search" icon-on="ion-ios-search" href="#/tab/home">
     <ion-nav-view name="home"></ion-nav-view>
   </ion-tab>
 
@@ -13,7 +13,7 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="me"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="App Library" icon-off="ion-android-apps" icon-on="ion-android-apps" href="#/tab/apps" badge="2" badge-style="badge-assertive">
+  <ion-tab title="App Library" icon-off="ion-android-apps" icon-on="ion-android-apps" href="#/tab/apps">
     <ion-nav-view name="apps"></ion-nav-view>
   </ion-tab>
 
@@ -21,7 +21,7 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="community"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Tech Tips & More" icon-off="ion-ios-lightbulb-outline" icon-on="ion-ios-lightbulb" href="#/tab/more">
+  <ion-tab title="Tips & More" icon-off="ion-ios-lightbulb-outline" icon-on="ion-ios-lightbulb" href="#/tab/more">
     <ion-nav-view name="more"></ion-nav-view>
   </ion-tab>
 
