add deploy plugin

--- a/scss/custom.sass
+++ b/scss/custom.sass
@@ -1,4 +1,4 @@
-$brandColor: #008cc9    // this is used for "calm"
+$brandColor: #0a558c    // this is used for "calm"
 $borderColor: #eee
 
 .below-subnav
