--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -15,7 +15,7 @@
   </ion-header-bar>
 
 
-  <ion-content class="has-subheader has-bg">
+  <ion-content class="has-subheader">
     <ion-refresher on-refresh="refresh()" pulling-icon="ion-chevron-up"></ion-refresher>
 
     <div class="list card">
