move some things around

--- a/www/templates/mylearning/mylearning.html
+++ b/www/templates/mylearning/mylearning.html
@@ -15,6 +15,10 @@
     </div>  
   </ion-header-bar>
   <ion-content class="has-subheader" ng-controller="MyLearningController">
+
     <ng-include src="'templates/partials/course-and-module-list.html'"></ng-include>
+
+    <ng-include src="'templates/partials/games.html'"></ng-include>
+
   </ion-content>
 </ion-view>
