--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -9,20 +9,20 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="home"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="My Learning" icon-off="ion-ios-book-outline" icon-on="ion-ios-book" href="#/tab/me">
+  <ion-tab title="My Learning" icon-off="ion-ios-lightbulb-outline" icon-on="ion-ios-lightbulb" href="#/tab/me">
     <ion-nav-view name="me"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="App Library" icon-off="ion-android-apps" icon-on="ion-android-apps" href="#/tab/apps">
+  <ion-tab title="Expert Tips" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/tips">
+    <ion-nav-view name="tips"></ion-nav-view>
+  </ion-tab>
+
+  <ion-tab title="Apps" icon-off="ion-android-apps" icon-on="ion-android-apps" href="#/tab/apps">
     <ion-nav-view name="apps"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Expert Community" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/community">
-    <ion-nav-view name="community"></ion-nav-view>
-  </ion-tab>
-
-  <ion-tab title="Tips & More" icon-off="ion-ios-lightbulb-outline" icon-on="ion-ios-lightbulb" href="#/tab/more">
-    <ion-nav-view name="more"></ion-nav-view>
+  <ion-tab title="Library" icon-off="ion-ios-book-outline" icon-on="ion-ios-book" href="#/tab/library">
+    <ion-nav-view name="library"></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
