--- a/scss/custom.sass
+++ b/scss/custom.sass
@@ -23,9 +23,14 @@ $borderColor: #eee
   font-size: 64px;
 
 .bigicon.ion-calendar
-  color: $brandColor;
+  color: $brandColor
 
+.calm-bg
+  background: $brandColor
 
+.introheaderlogo
+  max-width: 100%
+  max-height: 60px
 
 
 
