--- a/www/templates/welcome/intro.html
+++ b/www/templates/welcome/intro.html
@@ -1,5 +1,5 @@
-<ion-view hide-nav-bar="true" class="padding" ng-class="{'bg-gradient': activeIndex != 0}">
-  <ion-slide-box on-slide-changed="slideHasChanged($index)" active-slide="activeIndex" ng-init="activeIndex = 0" class="slide-intro">
+<ion-view hide-nav-bar="true" class="padding" ng-class="{'calm-bg': activeIndex != 0}">
+<!--   <ion-slide-box on-slide-changed="slideHasChanged($index)" active-slide="activeIndex" ng-init="activeIndex = 0" class="slide-intro">
     <ion-slide class="text-center flex-vertical-center">
       <h1 class="calm">Cortex Mobile</h1>
       <h2 class="font-thin">Essential knowledge for SCTE members on the move</h2>
@@ -10,10 +10,42 @@
     <ion-slide class="text-center flex-vertical-center">
       <h2 class="font-thin light">Exclusive access to essential knowledge</h2>
     </ion-slide>
-    <ion-slide class="text-center flex-vertical-center">
-      <h2 class="font-thin light">Essential information from around the industry</h2>
-    </ion-slide>
   </ion-slide-box>
+     -->
+    <div class="text-center flex-vertical-center">
+      <div class="head-text text-center">
+              <img ng-src="img/SCTE-ISBE_LogoBugs_White.png" class="introheaderlogo">
+<!--         <h2 class="font-thin" ng-if="cards.length">Swipe through these {{cards.length}} feature</h2>
+        <h2 class="font-thin" ng-if="!cards.length">No more cards :(</h2> -->
+      </div>
+
+      <td-cards ng-if="cards.length">
+        <td-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-swipe-left="cardSwipedLeft($event, $index)" on-swipe-right="cardSwipedRight($event, $index)" on-partial-swipe="cardPartialSwipe(amt)" class="card-{{$index}}">
+          <div class="list card card-tinder">
+            <div class="item b-none">
+              <h2>Cortex Logo</h2>
+            </div>
+            <div class="item item-text-wrap b-none">
+              <p>Feature description, feature description, feature description</p>
+              <img holder data-src="holder.js/100px80?outline=yes&text=<Feature Image>">
+            </div>
+            <div class="item item-body text-center" ng-click="cardDestroyed($index)">
+              <button class="button button-clear button-calm"><b>Swipe to see more!</b></button>
+            </div>
+            <div class="no-text">
+              <i class="icon ion-trash-b assertive"></i>
+              <p class="assertive">next feature</p>
+            </div>
+            <div class="yes-text">
+              <i class="icon ion-arrow-right-c calm"></i>
+              <p class="calm">next feature</p>
+            </div>
+          </div>
+        </td-card>
+      </td-cards>
+    </div>
+
+
 
   <div class="text-center padding intro-buttons">
     <button class="button button-block" ng-class="{'button-light button-outline': activeIndex != 0, 'button-calm': activeIndex == 0}" ng-click="openLogin()"><b>Sign in</b></button>
