--- a/scss/custom.sass
+++ b/scss/custom.sass
@@ -1,8 +1,7 @@
-$brandColor: #0a558c    // this is used for "calm"
 $borderColor: #eee
 
 .below-subnav
-  // this probable doesn't really work, but it's a hack for now
+  // this probably doesn't really work, but it's a hack for now
   top: 86px
 
 .app-icon
@@ -14,8 +13,6 @@ $borderColor: #eee
 
 .pdf-icon
   width: 50px
-  // height: 80px
-  // border-radius: 20%
   border: 2px solid $borderColor
   vertical-align: middle
 
@@ -23,17 +20,19 @@ $borderColor: #eee
   font-size: 64px;
 
 .bigicon.ion-calendar
-  color: $brandColor
+  color: $calm
 
 .calm-bg
-  background: $brandColor
+  background: $calm
 
 .introheaderlogo
   max-width: 100%
   max-height: 60px
 
 
-
+.item-divider
+//  background-color: $royal
+//  color: white
 
 
 
@@ -42,7 +41,7 @@ $borderColor: #eee
   line-height: 38px
   padding-top: 0
   padding-bottom: 0
-  transition: 0.15s all linear
+  transition: 0.4s all linear
 
 .list .item.item-accordion.ng-hide
   line-height: 0px
@@ -89,7 +88,7 @@ ion-side-menus
   border-right: 1px solid $borderColor !important
 .logo-text
   padding: 3px 6px
-  color: $brandColor
+  color: $calm
   background-color: #fff
   border-radius: 2px
   font-weight: 700
@@ -131,7 +130,7 @@ ion-side-menus
         border-right: 1px solid #888
 
 .bar.has-input
-  background-color: $brandColor
+  background-color: $calm
 .has-input .nav-bar-block
   display: none
 
@@ -344,7 +343,7 @@ td-card
 .box-shadow
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05)
 a
-  color: $brandColor
+  color: $calm
   font-weight: 700
   text-decoration: none
 .text-center
