--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -60,7 +60,7 @@
             <p>{{item.timestart}} - {{item.timeend}}</p>
             <p>{{item.locationname}}</p>
             <p>{{item.description}}</p>
-            <p><button class="button button-calm button-small" ng-show="item.registered">Registered!</button></p>
+            <p><button class="button button-royal button-small" ng-show="item.registered">Registered!</button></p>
           </div>
         </div>
       </a>
