integrated alphabatical list

--- a/www/templates/apps/apps.html
+++ b/www/templates/apps/apps.html
@@ -8,7 +8,7 @@
         </div>
 
 
-        <div class="item item-avatar" ng-click="openPage(item.url)" ng-show="item.type != 'separator' && item.os==platform">
+        <div class="item item-thumbnail-left" ng-click="openPage(item.url)" ng-show="item.type != 'separator' && item.os==platform">
           <img ng-src="{{item.coverimageurl}}" alt="">
           <div class="row">
             <div class="col-75">
