--- a/scss/custom.sass
+++ b/scss/custom.sass
@@ -1,7 +1,8 @@
+$brandColor: #008cc9    // this is used for "calm"
 $borderColor: #eee
 
 .below-subnav
-  // this probably doesn't really work, but it's a hack for now
+  // this probable doesn't really work, but it's a hack for now
   top: 86px
 
 .app-icon
@@ -13,6 +14,8 @@ $borderColor: #eee
 
 .pdf-icon
   width: 50px
+  // height: 80px
+  // border-radius: 20%
   border: 2px solid $borderColor
   vertical-align: middle
 
@@ -20,19 +23,12 @@ $borderColor: #eee
   font-size: 64px;
 
 .bigicon.ion-calendar
-  color: $calm
-
-.calm-bg
-  background: $calm
-
-.introheaderlogo
-  max-width: 100%
-  max-height: 60px
+  color: darkorange;
 
 
-.item-divider
-//  background-color: $royal
-//  color: white
+
+
+
 
 
 
@@ -41,7 +37,7 @@ $borderColor: #eee
   line-height: 38px
   padding-top: 0
   padding-bottom: 0
-  transition: 0.4s all linear
+  transition: 0.15s all linear
 
 .list .item.item-accordion.ng-hide
   line-height: 0px
@@ -88,7 +84,7 @@ ion-side-menus
   border-right: 1px solid $borderColor !important
 .logo-text
   padding: 3px 6px
-  color: $calm
+  color: $brandColor
   background-color: #fff
   border-radius: 2px
   font-weight: 700
@@ -130,7 +126,7 @@ ion-side-menus
         border-right: 1px solid #888
 
 .bar.has-input
-  background-color: $calm
+  background-color: $brandColor
 .has-input .nav-bar-block
   display: none
 
@@ -343,7 +339,7 @@ td-card
 .box-shadow
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(0, 0, 0, 0.05)
 a
-  color: $calm
+  color: $brandColor
   font-weight: 700
   text-decoration: none
 .text-center
