--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -16,7 +16,6 @@ $dark:                            #444 !default;
 */
 
 $calm:														#0a558c !default;
-$royal: 													#178acd !default;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
@@ -24,3 +23,4 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 @import "custom.sass";
+@import login.scss
