--- a/www/templates/welcome/login.html
+++ b/www/templates/welcome/login.html
@@ -1,36 +1,54 @@
-<ion-modal-view class="bg-gradient">
-  <ion-header-bar class="no-bg b-none">
-    <h1 class="title"></h1>
-    <button class="button button-icon button-clear button-light ion-android-close" ng-click="closeLogin()"></button>
-  </ion-header-bar>
-  <ion-content class="padding">
-    <div>
-      <img src="img/SCTE-ISBE_LogoBugs_Blue.png" style="width: 100%">
-    </div>
-    <div class="list card"> 
-      <label class="item item-input">
-        <span class="input-label">Email</span>
-        <input ng-model="email" type="text" focus-me>
-      </label>
-      <label class="item item-input">
-      <span class="input-label">Password</span>
-        <input ng-model="password" type="password">
-      </label>
-    </div>
+<ion-view hide-nav-bar="true" class="login-wrapper">
+  <ion-content>
+    <div id='full-size' ng-controller="loginCtrl">
+      <div id='logintop'>
+        <!--<div id="logoview" class="imageLogo">
+         <img src="img/login_logos.png" class = "imageLogo"/>
+       </div>-->  
+       <div class="row">
+       <div id="logoview" class="imageLogo">
+         <img src="img/SCTE-ISBE-logo.png" class="imageproperties" />
+       </div>
+       </div>
 
-    <div ng-controller="DynamicContentController">
-      <button class="button button-block button-outline button-light" ng-click="doLogin()"><b>Sign in</b></button>
-      
+       <div id="usernamediv" class="list list-inset">
+        <label class="item item-input">
+          <input ng-model="username" type="text" placeholder="Username" />
+        </label>
+      </div>
+      <div id="passworddiv" class="list list-inset">
+        <label class="item item-input">
+          <input ng-model="password" type="password" placeholder="Password" />
+        </label>
+      </div>
+      <div id="forgot-password" class="list backgroundprimarycolor list-inset">
+        <button ng-click="forgotpassword()" class="button button-clear">
+         Forgot Password?
+       </button>
+     </div>
+     <div id="logindiv">
+      <button ng-click="login()" class="button button-block button-energized">
+        Login
+      </button>
     </div>
-
-    <div class="light row">
-      <div class="col hide">
-        Forgot password
+    <div id='loginbottom'>
+      <div class="row">
+        <div id="signuptext" class="col text-center col-center">
+          <span class="haveacctext">Don't have an account to login?</span>
+        </div>
       </div>
-      <div class="col text-center">
-        <br>
-        <a href="" class="light" ng-click="closeLogin(); openJoinPage()">Become an SCTE member</a>
+      <div class="row">
+        <div id="joinSCTEdiv" class="col text-center col-center">
+          <button id="joinscte" ng-click="joinSCTE()" class="button button-outline button-energized">
+            JOIN SCTE NOW
+          </button>
+        </div>
       </div>
-    </p>
+      <div class="row">
+      <div id="weblink" class="col text-center col-center">
+          <a class='weblink' href="http://www.scte.org">www.scte.org</a><span class="weblink">|</span><a class='weblink' href="http://www.isbe.org">www.isbe.org</a>
+        </div>
+      </div>
+    </div>
   </ion-content>
-</ion-modal-view>
+</ion-view>
